fix image not showing

--- a/public/styles/components/footer.css
+++ b/public/styles/components/footer.css
@@ -1,17 +1,80 @@
-/* Error: Undefined variable.
- *    ,
- * 22 |       color: $dhtv-2;
- *    |              ^^^^^^^
- *    '
- *   scss\components\footer.scss 22:14  root stylesheet */
-
-body::before {
-  font-family: "Source Code Pro", "SF Mono", Monaco, Inconsolata, "Fira Mono",
-      "Droid Sans Mono", monospace, monospace;
-  white-space: pre;
-  display: block;
-  padding: 1em;
-  margin-bottom: 1em;
-  border-bottom: 2px solid black;
-  content: "Error: Undefined variable.\a    \2577 \a 22 \2502        color: $dhtv-2;\d\a    \2502               ^^^^^^^\a    \2575 \a   scss\\components\\footer.scss 22:14  root stylesheet";
+.footer {
+  background-color: #fdf8ef;
+  padding-top: 48px;
+  padding-bottom: 12px;
 }
+.footer__wrapper {
+  display: flex;
+  gap: 16px;
+  margin-top: 24px;
+}
+.footer__info img {
+  width: 177px;
+  height: 124px;
+}
+.footer__info .department {
+  font-size: 24px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #c92027;
+  margin-bottom: 24px;
+}
+.footer__info .info {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  margin-bottom: 8px;
+}
+.footer__info .info > div {
+  white-space: nowrap;
+}
+.footer__info .info__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 40px;
+  min-height: 40px;
+  border-radius: 50%;
+  background-color: #c92027;
+}
+.footer__info .info span {
+  font-size: 14px;
+  white-space: nowrap;
+}
+.footer__info .info__text {
+  font-weight: 500;
+  color: #c92027;
+}
+.footer__map iframe {
+  width: 357px;
+  height: 200px;
+}
+
+@media screen and (max-width: 1040px) {
+  .footer__wrapper {
+    padding: 0 16px;
+    flex-wrap: wrap;
+  }
+  .footer__info .info > div {
+    white-space: unset;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+  .footer__info span:last-child {
+    white-space: unset;
+  }
+  .footer__map {
+    width: 100%;
+  }
+  .footer__map iframe {
+    width: 100%;
+    height: 400px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .footer__info .info span:last-child {
+    word-break: break-word;
+  }
+}
+
+/*# sourceMappingURL=data:application/json;charset=utf-8,%7B%22version%22:3,%22sourceRoot%22:%22%22,%22sources%22:%5B%22../../../scss/components/footer.scss%22,%22../../../scss/variable.scss%22%5D,%22names%22:%5B%5D,%22mappings%22:%22AAEA;EACE;EACA;EACA;;AAEA;EACE;EACA;EACA;;AAIA;EACE;EACA;;AAGF;EACE;EACA;EACA;EACA,OCtBG;EDuBH;;AAGF;EACE;EACA;EACA;EACA;;AAEA;EACE;;AAGF;EACE;EACA;EACA;EACA;EACA;EACA;EACA,kBC3CC;;AD8CH;EACE;EACA;;AAGF;EACE;EACA,OCrDC;;AD2DL;EACE;EACA;;;AAKN;EAEI;IACE;IACA;;EAIA;IACE;IACA;IACA;;EAEF;IACE;;EAIJ;IACE;;EACA;IACE;IACA;;;AAMR;EAIQ;IACE%22,%22file%22:%22footer.css%22%7D */
